# py-mon-nodemon-for-python-

./: cli.py  hellow.py  knowledge_dump.md  optimising storing paths.md  pyproject.toml  reading_streams.md  readme.md  requirements.txt  test.py  test_runner.py
example/: hellow.py  test.py
example/flask-html-based-app/templates/: index.html
example/gui/: gui.py
example/webserver/: data.json  server.py
src/: Buffer.py  Command.py  Consumer.py  Inotify.py  PyMon.py  Watcher.py  WatcherPath.py  cli.py
src/core/: Buffer.py  Command.py  Watcher.py  WatcherPath.py
src/pymon/: Consumer.py  PyMon.py  cli.py
src/pymon/core/: Buffer.py  Inotify.py  PathTrie.py  Watcher.py  WatcherPath.py
